修正了swagger中的一些配置错误
